2007-03-18  Wolfgang Sourdeau  <wsourdeau@inverse.ca>

	* SoObjects/Appointments/SOGoCalendarComponent.m
	([SOGoCalendarComponent -isOrganizer:emailorOwner:login]): new
	method.
	([SOGoCalendarComponent -isParticipant:email]): new method.
	([SOGoCalendarComponent -calendar:create]): takes one parameter
	"create" which is a boolean indicating whether we want to create
	the calendar if it does not exist.

2007-03-12  Wolfgang Sourdeau  <wsourdeau@inverse.ca>

	* UI/Scheduler/UIxCalMonthView.m: changed view to use divs instead
	of a table, the same way the dayly and weekly views have been for
	a few months now.

2007-02-09  Helge Hess  <helge.hess@opengroupware.org>

	* SoObjects/Appointments/SOGoAppointmentFolder.m: added CalDAV
	  resourcetype

	* SoObjects/SOGo/SOGoUserFolder.m: added davCalendarHomeSet CalDAV
	  property to point at the user folder

2007-03-07  Wolfgang Sourdeau  <wsourdeau@inverse.ca>

	* SoObjects/SOGo/SOGoAuthenticator.m ([SOGoAuthenticator
	-userInContext:]): returns "SOGoUser".

	* SoObjects/Appointments/SOGoCalendarComponent.m
	([SOGoCalendarComponent -contentAsString]): overriden method that
	takes the privacy into account and discard the relevant fields if
	needed by generating a new content string and caching it.
	([SOGoCalendarComponent
	-saveContentString:contentStringbaseVersion:baseVersion]): if the
	new method above has cached a content string, release it and set
	it to nil so that it will have to be regenerated in the case it is
	requested further.
	([SOGoCalendarComponent -_filterPrivateComponent:component]):
	discard the fields that have to be hidden when the card is
	private.

	* SoObjects/Appointments/SOGoAppointmentFolder.m
	([SOGoAppointmentFolder
	-appendObject:objectwithBaseURL:baseURLtoREPORTResponse:r]): make
	sure the cards are now handled as instances of
	SOGoCalendarComponent instead of SOGoContentObject so that their
	content string is taking the privacy classifiction into account.